# 132

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/supabase/: schema.sql
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  Dockerfile.lambda-api  Dockerfile.lambda-worker  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  supabase_schema.sql  worker_entrypoint.sh
backend/app/: __init__.py  config.py  database.py  dependencies.py  lambda_api.py  lambda_worker.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  auth.py  dependencies.py  deps.py  generate_story.py  stripe_webhook.py  subscriptions.py  videos.py  webhooks.py
backend/app/assets/: README.md
backend/app/core/: auth.py  config.py  database.py  logging.py  security.py  supabase_client.py
backend/app/db/: session.py  supabase.py  supabase_client.py
backend/app/models/: __init__.py  base.py  subscription.py  user.py  video.py  video_job.py  video_project.py
backend/app/routers/: admin.py  billing.py  generate.py  shorts.py  users.py  webhooks.py
backend/app/routes/: health.py  story.py  stripe.py
backend/app/schemas/: __init__.py  auth.py  billing.py  job.py  jobs.py  scene.py  short.py  story.py  subscription.py  user.py  video.py
backend/app/services/: __init__.py  account.py  admin_users_service.py  animation_service.py  asset_worker.py  audio_video_pipeline.py  character_engine_service.py  credits.py  downloads.py  elevenlabs.py  elevenlabs_service.py  ffmpeg_service.py  job_queue.py  jobs.py  llm.py  llm_router.py  llm_service.py  media_fetcher.py  media_fetcher_service.py  media_pipeline.py  nim_client.py  object_storage.py  pipeline.py  providers.py  public_data.py  remotion_render.py  remotion_renderer.py  remotion_service.py  scraper_service.py  scrapers.py  storage.py  (+13 more)
backend/migrations/: env.py
backend/tests/: test_elevenlabs_alignment.py  test_scripting_router.py  test_subtitles.py
(+435 files in other folders)
